--- a/templates/charges.html
+++ b/templates/charges.html
@@ -213,7 +213,7 @@
                   <h1 class="modal-title fs-5" id="editModalLabel">Edit Charge</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form method="post">
+                <form method="post" id="main-group">
                     <div class="modal-body">
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
@@ -306,6 +306,20 @@
                 editForm.querySelector("#court_fee").value = charge['Court_fee'];
                 editForm.querySelector("#amount_paid").value = charge['Amount_paid'];
                 editForm.querySelector("#due_date").valueAsDate = new Date(charge['Pay_due_date']);
+            }
+
+            function editFieldsIn(id_name) {
+                var baseID = "#" + id_name;
+                document.querySelectorAll(baseID + " input, " + baseID + " select").forEach(function(element) {
+                    element.removeAttribute("disabled");
+                });
+            }
+            
+            function endEditFieldsIn(id_name) {
+                var baseID = "#" + id_name;
+                document.querySelectorAll(baseID + " input, " + baseID + " select").forEach(function(element) {
+                    element.setAttribute("disabled", true);
+                });
             }
 
             var queryStr = window.location.search;
