--- a/templates/probation_officers.html
+++ b/templates/probation_officers.html
@@ -240,7 +240,7 @@
                   <h1 class="modal-title fs-5" id="editModalLabel">Edit Probation Officer</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form method="post">
+                <form method="post" id="main-group">
                     <div class="modal-body">
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
@@ -361,6 +361,20 @@
                 } else if (prob_officer['Status'] === "I") {
                     editForm.querySelector("#status").querySelector("#inactive").checked = true;
                 }
+            }
+
+            function editFieldsIn(id_name) {
+                var baseID = "#" + id_name;
+                document.querySelectorAll(baseID + " input, " + baseID + " select").forEach(function(element) {
+                    element.removeAttribute("disabled");
+                });
+            }
+            
+            function endEditFieldsIn(id_name) {
+                var baseID = "#" + id_name;
+                document.querySelectorAll(baseID + " input, " + baseID + " select").forEach(function(element) {
+                    element.setAttribute("disabled", true);
+                });
             }
 
             var queryStr = window.location.search;
