--- a/templates/crimes.html
+++ b/templates/crimes.html
@@ -4,7 +4,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary hideable">
         <div class="container-fluid">
             <a class="navbar-brand" href="home">Dossier City System</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,17 +61,17 @@
         </div>
         {% endif %}
         {% endwith %}
-        <div class="row justify-content-end">
+        <div class="row justify-content-end hideable">
             <h1 class="col">Crimes</h1>
             <div class="col">
                 <a class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#addModal">Add Crime</a>
             </div>
         </div>
-        <form class="d-flex" method="get" role="search">
+        <form class="d-flex hideable" method="get" role="search">
             <div class="input-group mb-3">
                 <select class="input-group-text" id="column" name="column">
-                    <option value="cr_id">Charge ID</option>
-                    <option value="c_id">Crime ID</option>
+                    <option value="crime_id">Crime ID</option>
+                    <option value="criminal_id">Criminal ID</option>
                     <option value="classification">Classification</option>
                     <option value="date_charge">Date Charged</option>
                     <option value="status">Status</option>
@@ -100,7 +100,7 @@
                     {% for crime in crimes %}
                     <tr>
                         <td><input type="checkbox" id="check{{ crime['Crime_ID'] }}" name="check{{ crime['Crime_ID'] }}" value="" class="form-check-input"></td>
-                        <th scope="row"><a href="" data-bs-toggle="modal" data-bs-target="#editModal" onclick='javascript: showInfo({{ crime|tojson|safe }});'>{{ crime['Crime_ID'] }}</a></th>
+                        <th scope="row"><a href="/crimes?showID={{ crime['Crime_ID'] }}" target="_blank" data-bs-toggle="modal" data-bs-target="#editModal" onclick='javascript: showInfo({{ crime|tojson|safe }});' class="canBeNewTab">{{ crime['Crime_ID'] }}</a></th>
                         <td>{{ crime['Criminal_ID'] }}</td>
                         <td>{{ crime['Classification'] }}</td>
                         <td>{{ crime['Date_charged'] }}</td>
@@ -319,10 +319,29 @@
             
             var category = urlParams.get('column');
             var query = urlParams.get('query');
+            var embed = urlParams.get('embed');
+            var showID = urlParams.get('showID');
 
             if (category != null) {
                 document.getElementById('column').value = category;
                 document.getElementById('query').value = query;
+            }
+
+            if (embed) {
+                document.querySelectorAll(".hideable *, .hideable").forEach(function(element) {
+                    element.style.display = 'none';
+                })
+                document.querySelectorAll(".canBeNewTab").forEach(function(element) {
+                    element.removeAttribute("data-bs-toggle");
+                    element.removeAttribute("data-bs-target");
+                })
+            }
+
+            if (showID) {
+                {% if specific_crime %}
+                showInfo({{ specific_crime | tojson | safe }});
+                bootstrap.Modal.getOrCreateInstance("#editModal").show();
+                {% endif %}
             }
         </script>
     </body>
