--- a/templates/criminals.html
+++ b/templates/criminals.html
@@ -240,14 +240,19 @@
           </div>
           <!-- view/edit modal -->
           <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
+            <div class="modal-dialog modal-lg" style="min-width: 90%;">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="editModalLabel">Edit Criminal</h1>
+                  <h1 class="modal-title fs-5" id="editModalLabel">View Criminal</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <form method="post" id="main-group">
                     <div class="modal-body">
+                        <button class="btn btn-primary" onclick="if (editing) {
+                            endEditFieldsIn('main-group');
+                        } else {
+                            editFieldsIn('main-group');
+                        }" type="button">Edit</button>
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
                                 <label for="c_id">Criminal ID</label>
@@ -340,6 +345,14 @@
                                 </div>
                             </div>
                         </div>
+                        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#crimesCommitted" aria-expanded="false" aria-controls="crimesCommitted">
+                        Crimes Committed
+                        </button>
+                        <div class="collapse" id="crimesCommitted">
+                            <div class="card card-body">
+                              <iframe id="crimesCommittedEmbed" src="" height="500"></iframe>
+                            </div>
+                          </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
@@ -352,6 +365,8 @@
           </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script>
+            var editing = false;
+
             function showInfo(criminal) {
                 console.log(criminal);
                 var editForm = document.getElementById("editModal");
@@ -366,6 +381,7 @@
                 editForm.querySelector("#phone").value = criminal['Phone'];
                 editForm.querySelector("#vio_offender").checked = (criminal['V_status'] === "Y");
                 editForm.querySelector("#probation_stat").checked = (criminal['P_status'] === "Y");
+                editForm.querySelector("#crimesCommittedEmbed").src = "/crimes?embed=true&column=criminal_id&query="+criminal['Criminal_ID'];
             }
             
             function editFieldsIn(id_name) {
@@ -373,6 +389,7 @@
                 document.querySelectorAll(baseID + " input, " + baseID + " select").forEach(function(element) {
                     element.removeAttribute("disabled");
                 });
+                editing = true;
             }
             
             function endEditFieldsIn(id_name) {
@@ -380,6 +397,7 @@
                 document.querySelectorAll(baseID + " input, " + baseID + " select").forEach(function(element) {
                     element.setAttribute("disabled", true);
                 });
+                editing = false;
             }
 
             var queryStr = window.location.search;
@@ -392,6 +410,8 @@
                 document.getElementById('column').value = category;
                 document.getElementById('query').value = query;
             }
+
+            endEditFieldsIn('main-group');
         </script>
     </body>
 </html>
