--- a/templates/appeals.html
+++ b/templates/appeals.html
@@ -4,7 +4,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary hideable">
         <div class="container-fluid">
             <a class="navbar-brand" href="home">Dossier City System</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,13 +61,13 @@
         </div>
         {% endif %}
         {% endwith %}
-        <div class="row justify-content-end">
+        <div class="row justify-content-end hideable">
             <h1 class="col">Appeals</h1>
             <div class="col">
                 <a class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#addModal">Add Appeal</a>
             </div>
         </div>
-        <form class="d-flex" method="get" role="search">
+        <form class="d-flex hideable" method="get" role="search">
             <div class="input-group mb-3">
                 <select class="input-group-text" id="column" name="column">
                     <option value="a_id">Appeal ID</option>
@@ -96,7 +96,7 @@
                     {% for appeal in appeals %}
                     <tr>
                         <td><input type="checkbox" id="check{{ appeal['Appeal_ID'] }}" name="check{{ appeal['Appeal_ID'] }}" value=""></td>
-                        <th scope="row"><a href="" data-bs-toggle="modal" data-bs-target="#editModal" onclick='javascript: showInfo({{ appeal|tojson|safe }});'>{{ appeal["Appeal_ID"] }}</a></th>
+                        <th scope="row"><a href="/appeals?showID={{ appeal["Appeal_ID"] }}" target="_blank" class="canBeNewTab" data-bs-toggle="modal" data-bs-target="#editModal" onclick='javascript: showInfo({{ appeal|tojson|safe }});'>{{ appeal["Appeal_ID"] }}</a></th>
                         <td>{{ appeal["Crime_ID"] }}</td>
                         <td>{{ appeal["Filing_date"] }}</td>
                         <td>{{ appeal["Hearing_date"] }}</td>
@@ -239,8 +239,9 @@
           </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script>
+            var editForm = document.getElementById("editModal");
+
             function showInfo(appeal) {
-                var editForm = document.getElementById("editModal");
                 editForm.querySelector("#appeal_id").value = appeal['Appeal_ID'];
                 editForm.querySelector("#crime_id").value = appeal['Crime_ID'];
                 editForm.querySelector("#file_date").valueAsDate = new Date(appeal["Filing_date"]);
@@ -267,10 +268,29 @@
             
             var category = urlParams.get('column');
             var query = urlParams.get('query');
+            var embed = urlParams.get('embed');
+            var showID = urlParams.get('showID');
 
             if (category != null) {
                 document.getElementById('column').value = category;
                 document.getElementById('query').value = query;
+            }
+
+            if (embed) {
+                document.querySelectorAll(".hideable *, .hideable").forEach(function(element) {
+                    element.style.display = 'none';
+                })
+                document.querySelectorAll(".canBeNewTab").forEach(function(element) {
+                    element.removeAttribute("data-bs-toggle");
+                    element.removeAttribute("data-bs-target");
+                })
+            }
+
+            if (showID) {
+                {% if specific_appeal %}
+                showInfo({{ specific_appeal | tojson | safe }});
+                bootstrap.Modal.getOrCreateInstance(editForm).show();
+                {% endif %}
             }
         </script>
     </body>
