--- a/templates/criminals.html
+++ b/templates/criminals.html
@@ -352,7 +352,15 @@
                             <div class="card card-body">
                               <iframe id="crimesCommittedEmbed" src="" height="500"></iframe>
                             </div>
-                          </div>
+                        </div>
+                        <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#appealsMade" aria-expanded="false" aria-controls="appealsMade">
+                            Appeals Made
+                            </button>
+                            <div class="collapse" id="appealsMade">
+                                <div class="card card-body">
+                                  <iframe id="appealsMadeEmbed" src="" height="500"></iframe>
+                                </div>
+                            </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
@@ -366,10 +374,14 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script>
             var editing = false;
+            var editForm = document.getElementById("editModal");
+
+            editForm.addEventListener('hidden.bs.modal', event => {
+                bootstrap.Collapse.getInstance(editForm.querySelector("#appealsMade")).hide();
+                bootstrap.Collapse.getInstance(editForm.querySelector("#crimesCommitted")).hide();
+            });
 
             function showInfo(criminal) {
-                console.log(criminal);
-                var editForm = document.getElementById("editModal");
                 editForm.querySelector("#c_id").value = criminal['Criminal_ID'];
                 editForm.querySelector("#l_name").value = criminal['Last'];
                 editForm.querySelector("#f_name").value = criminal['First'];
@@ -381,6 +393,13 @@
                 editForm.querySelector("#phone").value = criminal['Phone'];
                 editForm.querySelector("#vio_offender").checked = (criminal['V_status'] === "Y");
                 editForm.querySelector("#probation_stat").checked = (criminal['P_status'] === "Y");
+                editForm.querySelector("#crimesCommitted").addEventListener('show.bs.collapse', event=> {
+                    editForm.querySelector("#crimesCommittedEmbed").src += "";
+                });
+                editForm.querySelector("#appealsMade").addEventListener('show.bs.collapse', event=> {
+                    editForm.querySelector("#appealsMadeEmbed").src += "";
+                });
+                editForm.querySelector("#appealsMadeEmbed").src = "/appeals?embed=true&column=criminal_id&query="+criminal['Criminal_ID'];
                 editForm.querySelector("#crimesCommittedEmbed").src = "/crimes?embed=true&column=criminal_id&query="+criminal['Criminal_ID'];
             }
             
