moved some shared components to a script static file

--- a/templates/appeals.html
+++ b/templates/appeals.html
@@ -249,20 +249,6 @@
                 editForm.querySelector("#status").value = appeal['Status'];
             }
 
-            function editFieldsIn(id_name) {
-                var baseID = "#" + id_name;
-                document.querySelectorAll(baseID + " input, " + baseID + " select").forEach(function(element) {
-                    element.removeAttribute("disabled");
-                });
-            }
-            
-            function endEditFieldsIn(id_name) {
-                var baseID = "#" + id_name;
-                document.querySelectorAll(baseID + " input, " + baseID + " select").forEach(function(element) {
-                    element.setAttribute("disabled", true);
-                });
-            }
-
             var queryStr = window.location.search;
             var urlParams = new URLSearchParams(queryStr);
             
@@ -271,21 +257,6 @@
             var embed = urlParams.get('embed');
             var showID = urlParams.get('showID');
 
-            if (category != null) {
-                document.getElementById('column').value = category;
-                document.getElementById('query').value = query;
-            }
-
-            if (embed) {
-                document.querySelectorAll(".hideable *, .hideable").forEach(function(element) {
-                    element.style.display = 'none';
-                })
-                document.querySelectorAll(".canBeNewTab").forEach(function(element) {
-                    element.removeAttribute("data-bs-toggle");
-                    element.removeAttribute("data-bs-target");
-                })
-            }
-
             if (showID) {
                 {% if specific_appeal %}
                 showInfo({{ specific_appeal | tojson | safe }});
@@ -293,5 +264,6 @@
                 {% endif %}
             }
         </script>
+        <script src="{{ url_for('static', filename='script.js')}}"></script>
     </body>
 </html>
