--- a/templates/charges.html
+++ b/templates/charges.html
@@ -4,7 +4,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary hideable">
         <div class="container-fluid">
             <a class="navbar-brand" href="home">Dossier City System</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,7 +67,7 @@
                 <a class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#addModal">Add Charge</a>
             </div>
         </div>
-        <form class="d-flex" method="get" role="search">
+        <form class="d-flex hideable" method="get" role="search">
             <div class="input-group mb-3">
                 <select class="input-group-text" id="column" name="column">
                     <option value="charge_id">Charge ID</option>
@@ -307,31 +307,7 @@
                 editForm.querySelector("#amount_paid").value = charge['Amount_paid'];
                 editForm.querySelector("#due_date").valueAsDate = new Date(charge['Pay_due_date']);
             }
-
-            function editFieldsIn(id_name) {
-                var baseID = "#" + id_name;
-                document.querySelectorAll(baseID + " input, " + baseID + " select").forEach(function(element) {
-                    element.removeAttribute("disabled");
-                });
-            }
-            
-            function endEditFieldsIn(id_name) {
-                var baseID = "#" + id_name;
-                document.querySelectorAll(baseID + " input, " + baseID + " select").forEach(function(element) {
-                    element.setAttribute("disabled", true);
-                });
-            }
-
-            var queryStr = window.location.search;
-            var urlParams = new URLSearchParams(queryStr);
-            
-            var category = urlParams.get('column');
-            var query = urlParams.get('query');
-
-            if (category != null) {
-                document.getElementById('column').value = category;
-                document.getElementById('query').value = query;
-            }
         </script>
+        <script src="{{ url_for('static', filename='script.js')}}"></script>
     </body>
 </html>
