dynamically controlling editing entries

--- a/templates/charges.html
+++ b/templates/charges.html
@@ -126,6 +126,11 @@
                 </div>
                 <form method="post">
                     <div class="modal-body">
+                        <button class="btn btn-primary" onclick="if (editing) {
+                            endEditFieldsIn('main-group');
+                        } else {
+                            editFieldsIn('main-group');
+                        }" type="button">Edit</button>
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
                                 <label for="charge_id">Charge ID</label>
@@ -215,6 +220,11 @@
                 </div>
                 <form method="post" id="main-group">
                     <div class="modal-body">
+                        <button class="btn btn-primary" onclick="if (editing) {
+                            endEditFieldsIn('main-group');
+                        } else {
+                            editFieldsIn('main-group');
+                        }" type="button">Edit</button>
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
                                 <label for="charge_id">Charge ID</label>
