--- a/templates/appeals.html
+++ b/templates/appeals.html
@@ -117,6 +117,11 @@
                 </div>
                 <form method="post">
                     <div class="modal-body">
+                        <button class="btn btn-primary" onclick="if (editing) {
+                            endEditFieldsIn('main-group');
+                        } else {
+                            editFieldsIn('main-group');
+                        }" type="button">Edit</button>
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
                                 <label for="appeal_id">Appeal ID</label>
@@ -182,6 +187,11 @@
                 </div>
                 <form method="post" id="main-group">
                     <div class="modal-body">
+                        <button class="btn btn-primary" onclick="if (editing) {
+                            endEditFieldsIn('main-group');
+                        } else {
+                            editFieldsIn('main-group');
+                        }" type="button">Edit</button>
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
                                 <label for="appeal_id">Appeal ID</label>
