--- a/templates/crimes.html
+++ b/templates/crimes.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="{{ url_for('static', filename='script.js')}}"></script>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary hideable">
@@ -123,6 +124,11 @@
                 </div>
                 <form method="post">
                     <div class="modal-body">
+                        <button class="btn btn-primary" onclick="if (editing) {
+                            endEditFieldsIn('main-group');
+                        } else {
+                            editFieldsIn('main-group');
+                        }" type="button">Edit</button>
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
                                 <label for="c_id">Crime ID</label>
@@ -210,6 +216,11 @@
                 </div>
                 <form method="post" id="main-group">
                     <div class="modal-body">
+                        <button class="btn btn-primary" onclick="if (editing) {
+                            endEditFieldsIn('main-group');
+                        } else {
+                            editFieldsIn('main-group');
+                        }" type="button">Edit</button>
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
                                 <label for="c_id">Crime ID</label>
@@ -301,26 +312,9 @@
                 editForm.querySelector("#cutoff_date").valueAsDate = new Date(crime['Appeal_cut_date']);
             }
 
-            function editFieldsIn(id_name) {
-                var baseID = "#" + id_name;
-                document.querySelectorAll(baseID + " input, " + baseID + " select").forEach(function(element) {
-                    element.removeAttribute("disabled");
-                });
-            }
-
-            function endEditFieldsIn(id_name) {
-                var baseID = "#" + id_name;
-                document.querySelectorAll(baseID + " input, " + baseID + " select").forEach(function(element) {
-                    element.setAttribute("disabled", true);
-                });
-            }
-
             var queryStr = window.location.search;
             var urlParams = new URLSearchParams(queryStr);
             
-            var category = urlParams.get('column');
-            var query = urlParams.get('query');
-            var embed = urlParams.get('embed');
             var showID = urlParams.get('showID');
 
             if (showID) {
@@ -330,6 +324,5 @@
                 {% endif %}
             }
         </script>
-        <script src="{{ url_for('static', filename='script.js')}}"></script>
     </body>
 </html>
