--- a/templates/probation_officers.html
+++ b/templates/probation_officers.html
@@ -131,6 +131,11 @@
                 </div>
                 <form method="post">
                     <div class="modal-body">
+                        <button class="btn btn-primary" onclick="if (editing) {
+                            endEditFieldsIn('main-group');
+                        } else {
+                            editFieldsIn('main-group');
+                        }" type="button">Edit</button>
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
                                 <label for="prob_id">Probation Officer ID</label>
@@ -242,6 +247,11 @@
                 </div>
                 <form method="post" id="main-group">
                     <div class="modal-body">
+                        <button class="btn btn-primary" onclick="if (editing) {
+                            endEditFieldsIn('main-group');
+                        } else {
+                            editFieldsIn('main-group');
+                        }" type="button">Edit</button>
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
                                 <label for="prob_id">Probation Officer ID</label>
