more reorganization, some semantics fixes

--- a/templates/sentences.html
+++ b/templates/sentences.html
@@ -71,7 +71,7 @@
             <div class="input-group mb-3">
                 <select class="input-group-text" id="column" name="column">
                     <option value="s_id">Sentence ID</option>
-                    <option value="c_id">Crime ID</option>
+                    <option value="c_id">Criminal ID</option>
                     <option value="type">Type</option>
                     <option value="p_id">Probation ID</option>
                     <option value="start_date">Start Date</option>
@@ -88,7 +88,7 @@
                     <tr>
                         <th></th>
                         <th scope="col">Sentence ID</th>
-                        <th scope="col">Crime ID</th>
+                        <th scope="col">Criminal ID</th>
                         <th scope="col">Type</th>
                         <th scope="col">Probation ID</th>
                         <th scope="col">Start Date</th>
