got around the whole iframe causing sync issues

--- a/templates/charges.html
+++ b/templates/charges.html
@@ -235,7 +235,7 @@
                         </div>
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
-                                <label for="c_id">Criminal to Add Charge</label>
+                                <label for="c_id">Crime ID</label>
                             </div>
                             <div class="col-sm-10">
                                 <input type="text" name="c_id" id="c_id" class="form-control" readonly>
