--- a/templates/charges.html
+++ b/templates/charges.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="{{ url_for('static', filename='script.js')}}"></script>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary hideable">
@@ -102,7 +103,7 @@
                     {% for charge in charges %}
                     <tr>
                         <td><input type="checkbox" id="check{{ charge['Charge_ID'] }}" name="check{{ charge['Charge_ID'] }}" value=""></td>
-                        <th scope="row"><a href="" data-bs-toggle="modal" data-bs-target="#editModal" onclick='javascript: showInfo({{ charge|tojson|safe }});'>{{ charge["Charge_ID"] }}</a></th>
+                        <th scope="row"><a href="/charges?showID={{ charge['Charge_ID'] }}" target="_blank" data-bs-toggle="modal" data-bs-target="#editModal" onclick='javascript: showInfo({{ charge|tojson|safe }});' class="canBeNewTab">{{ charge["Charge_ID"] }}</a></th>
                         <td>{{ charge["Crime_ID"] }}</td>
                         <td>{{ charge["Crime_code"] }}</td>
                         <td>{{ charge["Charge_status"] }}</td>
@@ -306,8 +307,9 @@
           </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script>
+            var editForm = document.getElementById("editModal");
+
             function showInfo(charge) {
-                var editForm = document.getElementById("editModal");
                 editForm.querySelector("#charge_id").value = charge['Charge_ID'];
                 editForm.querySelector("#c_id").value = charge['Crime_ID'];
                 editForm.querySelector("#status").value = charge['Charge_status'];
@@ -317,7 +319,18 @@
                 editForm.querySelector("#amount_paid").value = charge['Amount_paid'];
                 editForm.querySelector("#due_date").valueAsDate = new Date(charge['Pay_due_date']);
             }
+
+            var queryStr = window.location.search;
+            var urlParams = new URLSearchParams(queryStr);
+            
+            var showID = urlParams.get('showID');
+
+            if (showID) {
+                {% if specific_charge %}
+                showInfo({{ specific_charge | tojson | safe }});
+                bootstrap.Modal.getOrCreateInstance(editForm).show();
+                {% endif %}
+            }
         </script>
-        <script src="{{ url_for('static', filename='script.js')}}"></script>
     </body>
 </html>
