sentences from criminal added, title adjustments

--- a/templates/appeals.html
+++ b/templates/appeals.html
@@ -61,7 +61,7 @@
         </div>
         {% endif %}
         {% endwith %}
-        <div class="row justify-content-end hideable">
+        <div class="row justify-content-end">
             <h1 class="col">Appeals</h1>
             <div class="col">
                 <a class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#addModal">Add Appeal</a>
