--- a/templates/crimes.html
+++ b/templates/crimes.html
@@ -62,7 +62,7 @@
         </div>
         {% endif %}
         {% endwith %}
-        <div class="row justify-content-end hideable">
+        <div class="row justify-content-end">
             <h1 class="col">Crimes</h1>
             <div class="col">
                 <a class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#addModal">Add Crime</a>
