--- a/templates/sentences.html
+++ b/templates/sentences.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <script src="{{ url_for('static', filename='script.js')}}"></script>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg bg-body-tertiary hideable">
@@ -100,7 +101,7 @@
                     {% for sentence in sentences %}
                     <tr>
                         <td><input type="checkbox" id="check{{ sentence['Sentence_ID'] }}" name="check{{ sentence['Sentence_ID'] }}" value=""></td>
-                        <th scope="row"><a href="" data-bs-toggle="modal" data-bs-target="#editModal" onclick='javascript: showInfo({{ sentence|tojson|safe }});'>{{ sentence["Sentence_ID"] }}</a></th>
+                        <th scope="row"><a href="/sentences?showID={{ sentence['Sentence_ID'] }}" target="_blank" data-bs-toggle="modal" data-bs-target="#editModal" onclick='javascript: showInfo({{ sentence|tojson|safe }});' class="canBeNewTab">{{ sentence["Sentence_ID"] }}</a></th>
                         <td>{{ sentence["Criminal_ID"] }}</td>
                         <td>{{ sentence["Type"] }}</td>
                         <td>{{ sentence["Prob_ID"] }}</td>
@@ -287,8 +288,9 @@
           </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script>
+            var editForm = document.getElementById("editModal");
+
             function showInfo(sentence) {
-                var editForm = document.getElementById("editModal");
                 editForm.querySelector("#s_id").value = sentence['Sentence_ID'];
                 editForm.querySelector("#c_id").value = sentence['Criminal_ID'];
                 editForm.querySelector("#p_id").value = sentence['Prob_ID'];
@@ -297,7 +299,18 @@
                 editForm.querySelector("#end_date").valueAsDate = new Date(sentence['End_date']);
                 editForm.querySelector("#violations").value = sentence['Violations'];
             }
+
+            var queryStr = window.location.search;
+            var urlParams = new URLSearchParams(queryStr);
+            
+            var showID = urlParams.get('showID');
+
+            if (showID) {
+                {% if specific_sentence %}
+                showInfo({{ specific_sentence | tojson | safe }});
+                bootstrap.Modal.getOrCreateInstance(editForm).show();
+                {% endif %}
+            }
         </script>
-        <script src="{{ url_for('static', filename='script.js')}}"></script>
     </body>
 </html>
