sentences to probation officer and criminal jump with some bug fix

--- a/templates/crimes.html
+++ b/templates/crimes.html
@@ -288,7 +288,7 @@
                                 <input type="date" name="cutoff_date" id="cutoff_date" class="form-control">
                             </div>
                         </div>
-                        <a href="/criminal" class="btn btn-primary" id="criminal-ref">View Info About Criminal</a>
+                        <a href="/criminal" class="btn btn-primary" id="criminal-ref" target="_blank">View Info About Criminal</a>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
