--- a/templates/probation_officers.html
+++ b/templates/probation_officers.html
@@ -328,7 +328,7 @@
                             <div class="col-sm-2 col-form-label">
                                 <label for="status">Status</label>
                             </div>
-                            <div class="col-sm-10">
+                            <div class="col-sm-10" id="status">
                                 <div class="form-check">
                                     <input class="form-check-input" type="radio" name="status" id="active" value="A" checked>
                                     <label class="form-check-label" for="active">
@@ -355,8 +355,9 @@
           </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script>
+            var editForm = document.getElementById("editModal");
+
             function showInfo(prob_officer) {
-                var editForm = document.getElementById("editModal");
                 editForm.querySelector("#prob_id").value = prob_officer['Prob_ID'];
                 editForm.querySelector("#l_name").value = prob_officer['Last'];
                 editForm.querySelector("#f_name").value = prob_officer['First'];
@@ -367,10 +368,22 @@
                 editForm.querySelector("#phone").value = prob_officer['Phone'];
                 editForm.querySelector("#email").value = prob_officer['Email'];
                 if (prob_officer['Status'] === "A") {
-                    editForm.querySelector("#status").querySelector("#active").checked = true;
+                    editForm.querySelector("#status #active").checked = true;
                 } else if (prob_officer['Status'] === "I") {
-                    editForm.querySelector("#status").querySelector("#inactive").checked = true;
+                    editForm.querySelector("#status #inactive").checked = true;
                 }
+            }
+
+            var queryStr = window.location.search;
+            var urlParams = new URLSearchParams(queryStr);
+            
+            var showID = urlParams.get('showID');
+
+            if (showID) {
+                {% if specific_prob_officer %}
+                showInfo({{ specific_prob_officer | tojson | safe }});
+                bootstrap.Modal.getOrCreateInstance(editForm).show();
+                {% endif %}
             }
         </script>
         <script src="{{ url_for('static', filename='script.js')}}"></script>
